--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yidan Xue
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: DPhil Student in Biomedical Engineering at Oxford
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/yidanxue/yidanxue.github.io/master/images/YX.jpg
