--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yidan Xue
 description: DPhil Student in Biomedical Engineering at Oxford
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/yidanxue/yidanxue.github.io/master/images/YX.jpg
+avatar: https://raw.githubusercontent.com/yidanxue/yidanxue.github.io/tree/master/images/YX.jpg
 
 #
 # Flags below are optional
