--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: /images/YX.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: xueyidan@hotmail.com
+  email: 
   facebook:
   flickr:
   github: YidanXue
