--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Yidan Xue
+name: Yidan Xue 薛逸丹
 
 # Short bio or description (displayed in the header)
 description: DPhil Student in Biomedical Engineering at Oxford
