--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yichao Liang (梁毅超)
 description: Student in Artificial Intelligence, Computing.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: 
 
 # https://sdp2020.gitlab.io/group4/
 # Flags below are optional
