--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Yichao Liang (梁毅超)
 
 # Short bio or description (displayed in the header)
-description: Student in Artificial Intelligence, Computing.
+description: Searching the Truth of Intelligence through Computation.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/content_images_members_yichao.jpg
