--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,6 @@ description: Searching for the Truth of Intelligence through Computation.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/content_images_members_yichao.jpg
 
-# https://sdp2020.gitlab.io/group4/
-# Flags below are optional
-#
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -47,7 +44,7 @@ url: yichao-l.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/yichao-l.github.io/about/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
